refined stereo stage design